Included some validation and authentication for security purposes

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "AppSettings" :{
+
+    "Token" : "Super secret key"
+  },
+
   "ConnectionStrings":{
   "DefaultConnection":"Data Source=LoveLife.db"
   },
