--- a/LoveLife-SPA/package.json
+++ b/LoveLife-SPA/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@auth0/angular-jwt": "^2.0.0",
     "alertifyjs": "^1.11.2",
     "bootstrap": "^4.1.3",
+    "bootswatch": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^3.1.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
