Added migrations, photos controller for the photo functionality

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,5 +13,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings" : {
+    "CloudName" : "dbbwaxlz8",
+    "ApiKey":"558179846561496",
+    "ApiSecret" : "Mb6OeBxn-Tbtz7otatZH1ocf6Jc"
+  }
 }
