--- a/LoveLife-SPA/package.json
+++ b/LoveLife-SPA/package.json
@@ -26,6 +26,7 @@
     "bootswatch": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.1.2",
     "ngx-gallery": "^5.9.0",
     "rxjs": "^6.0.0",
