--- a/LoveLife-SPA/package.json
+++ b/LoveLife-SPA/package.json
@@ -29,6 +29,7 @@
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.1.2",
     "ngx-gallery": "^5.9.0",
+    "ngx-pagination": "^3.2.1",
     "rxjs": "^6.0.0",
     "time-ago-pipe": "^1.3.2",
     "zone.js": "^0.8.26"
